--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
         "start": "node server.js"
     },
     "dependencies": {
+        "@supabase/supabase-js": "^2.47.9",
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^4.18.2",
         "nodemailer": "^6.9.1",
+        "nodemon": "^3.1.9",
         "pg": "^8.11.0"
     }
 }
